--- a/styles/folklore.scss
+++ b/styles/folklore.scss
@@ -1,4 +1,3 @@
-@media (max-width: 1920px){
     .folklore {
         background: #212121;
         padding-top: 80px;
@@ -62,10 +61,67 @@
                 
             }
         }
+        .slick-prev {
+            left: 0px;
+        }
+        .slick-next {
+            right: 0px;
+        }
+        .slick-prev, .slick-next {
+            width: 77px !important;
+            height: 77px !important;
+            background: rgba(174, 174, 174, 0.5) !important;
+            border-radius: 5px !important;
+            z-index: 1;
+        }
+        
+        
+    }
+
+
+@media (max-width: 768px) {
+    .folklore {
+        padding-top: 15px;
+        &_title {
+            font-size: 20px;
+        }
+        &_slider {
+            padding: 0px;
+            margin-top: 10px;
+            margin-bottom: 30px;
+            .slide_card{
+                
+                height: 215px;
+                margin-left: 15px;
+                .slide_span {
+                    width: 185px;
+                    span {
+                        font-weight: 500;
+                        font-size: 20px;
+                        line-height: 24px;
+                    }
+                }
+                img {
+                    width: 100%;
+                    height: 100%;
+                    margin-left: 0px;
+                }
+            }
+        }
+        &_button {
+            button {
+                padding: 16px 30px;
+                font-size: 16px;
+                margin-bottom: 30px;
+            }
+        }
+        .slick-prev, .slick-next {
+            width: 30px !important;
+            height: 30px !important;
+            background: rgba(174, 174, 174, 0.5) !important;
+            border-radius: 5px !important;
+            z-index: 1;
+        }
     }
 }
-
-
-//размер экрана больше 1920px/////////////
-
 
