--- a/styles/artefacts.scss
+++ b/styles/artefacts.scss
@@ -73,10 +73,12 @@
             h3 {
                 font-size: 12px;
                 line-height: 140.3%;
+                margin-top: 10px;
             }
             p {
                 font-size: 10px;
                 line-height: 12px;  
+                margin-top: 8px;
             }
         }
         &_content {
