--- a/styles/card.scss
+++ b/styles/card.scss
@@ -67,7 +67,7 @@
     .card {
         width: 284px;
         height: 215px;
-
+        margin-bottom: 290px;
         &_text {
             width: 100%;
 
