--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -33,6 +33,12 @@
         }
     }
     &_social {
+        h4 {
+            font-weight: bold;
+            font-size: 16px;
+            line-height: 19px;
+            margin-bottom: 28px;
+        }
         ul {
             display: flex;
             li {
@@ -46,29 +52,73 @@
             }
         }
     }
-    // .list {
-    //     display: flex;
-    //     flex-wrap: wrap;
-      
-    //     &__item {
-    //       width: 50%;
-      
-    //       @media (max-width: 768px) {
-    //         width: auto;
-    //         margin-right: 50px;
-    //       }
-    //     }
-    //   }
     h4 {
         font-weight: bold;
         font-size: 16px;
         line-height: 19px;
         margin-bottom: 28px;
     }
+    &_line {
+        display: none;
+    }
 }
 
 @media (max-width: 1024px) {
     .footer {
+        padding: 13px 0px;
         flex-direction: column;
+
+        &_line {
+            display: block;
+            width: 100%;
+            height: 1px;
+            background-color: #00000033;
+        }
+
+        &_logo {
+            width: 195px;
+            height: 55px;
+            margin-left: 22px;
+
+            img {
+                width: 100%;
+            }
+        }
+
+        &_nav {
+            padding: 0px 22px;
+            margin-top: 30px;
+            margin-left: 0px;
+
+            ul {
+                li {
+                    margin-right: 18px;
+                    font-size: 14px;
+                    line-height: 5px;
+                }
+            }
+        }
+        &_social {
+            margin-top: 15px;
+            padding: 0px 22px;
+
+            h4 {
+                margin: 0px;
+            }
+            ul {
+                margin-top: 15px;
+
+                li {
+                    margin-right: 30px;
+
+                    a {
+                        img {
+                            width: 20px;
+                            height: 20px;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
