--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,9 +5,7 @@
   box-sizing: border-box;
   outline: none;
   list-style: none;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-
+  font-family: 'Lava Pro';
 }
 a {
   color: inherit;
