--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -1,7 +1,16 @@
 .footer {
-    padding: 80px 35px;
-    display: flex;
-    justify-content: space-around;
+    &_lineDesk {
+        display: block;
+        width: 100%;
+        height: 1px;
+        background-color: #00000033;
+        margin-top: 160px;
+    }
+    &_content {
+        padding: 80px 35px;
+        display: flex;
+        justify-content: space-around;
+    }
  
     &_logo {
         width: 378px;
@@ -61,12 +70,19 @@
     &_line {
         display: none;
     }
+
 }
 
 @media (max-width: 1024px) {
     .footer {
-        padding: 13px 0px;
+        &_content{
+            padding: 13px 0px;
         flex-direction: column;
+        }
+        
+        &_lineDesk {
+            display: none;
+        }
 
         &_line {
             display: block;
