--- a/styles/button.scss
+++ b/styles/button.scss
@@ -24,3 +24,35 @@
     color: #A83132;
     border: 2px solid #A83132;
 }
+.buttonPag {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .btn {
+        cursor: pointer;
+        padding: 13px 52px;
+        font-weight: bold;
+        font-size: 20px;
+        border-radius: 5px;
+        border: none;
+        color: white;
+        margin-left: 20px;
+        &_next {
+            background-color: #A83132;
+        }
+        &_prev {
+            background: #A5A5A5;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .buttonPag {
+        .btn {
+            padding: 13px 10px;
+            font-size: 12px;
+            margin-left: 10px;
+            margin-bottom: 40px;
+        }
+    }
+}
