--- a/styles/gallery.scss
+++ b/styles/gallery.scss
@@ -1,15 +1,33 @@
 .gallery {
     background: #212121;
+    &_content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 80px;
+    }
     &_card {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 80px;
+        margin-left: 20px;
         img {
             width: 350px;
             height: 300px;
-            margin-left: 20px;
+            
             margin-top: 20px;
+        }
+        &-heigth {
+            width: 350px;
+            height: 500px;
+            margin-top: 100px;
+            margin-right: 0px;
+            img {
+                height: 100%;
+            }
+            p {
+                font-size: 16px;
+                line-height: 19px;
+                color: #626262;
+                margin-top: 15px;
+            }
         }
     }
     &_title {
@@ -21,7 +39,15 @@
         color: #FFFFFF;
     }
 }
-
+.galleryPage{
+    &_content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        
+        margin-bottom: 180px; 
+    } 
+}
 @media (max-width: 800px) {
     .gallery {
         &_title {
