--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -205,6 +205,17 @@ a {
     }
   }
 }
+// @media (max-width: 800px) {
+//   .articles {
+//     &_title {
+//       margin-top:30px;
+//       font-size: 22px;
+//     }
+//     &_card {
+//       margin-top: 25px;
+//     }
+//   }
+// }
 
 
 
