--- a/styles/gallery.scss
+++ b/styles/gallery.scss
@@ -55,11 +55,33 @@
             font-size: 22px;
         }
         &_card {
+            margin-left: 10px;
             margin-top: 25px;
+            margin-right: 10px;
+            margin-bottom: 55px;
             img {
                 width: 300px;
                 height: 250px;
             }
+            &-heigth {
+                width: 167px;
+                height: 204px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+                p {
+                    font-size: 10px;
+                    line-height: 12px;
+                    color: #626262;
+                    margin-top: 15px;
+                }
+            }
         }
+    }
+    .galleryPage{
+        &_content {
+            margin-bottom: 130px; 
+        } 
     }
 }
