--- a/styles/button.scss
+++ b/styles/button.scss
@@ -46,6 +46,17 @@
     }
 }
 
+@media (max-width: 1024px) {
+    .buttonPag {
+        .btn {
+            padding: 20px 25px;
+            font-size: 12px;
+            margin-left: 40px;
+            margin-bottom: 40px;
+        }
+    }
+}
+
 @media (max-width: 768px) {
     .buttonPag {
         .btn {
