--- a/styles/books.scss
+++ b/styles/books.scss
@@ -13,7 +13,7 @@
         margin-top: 80px;
         margin-left: 30px;
         img {
-            width: 350px;
+            width: 340px;
             height: 480px;
         }
         span {
@@ -46,6 +46,14 @@
     }
 }
 
+.literaturePage{
+    &_content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-bottom: 120px;
+    }
+}
 @media (max-width: 1024px) {
     .books {
         &_title {
@@ -99,7 +107,7 @@
 @media (max-width: 480px) {
     .books {
         &_card {
-            margin-left: 15px;
+            margin-left: 8px;
         }
     }
 }
