--- a/styles/header.scss
+++ b/styles/header.scss
@@ -96,7 +96,7 @@
             display: block;
             background-color: #1C1C1C;
             width: 310px;
-            height: 720px;
+            height: 100vh;
             z-index: 1;
             position: fixed;
             top: 0;
