--- a/styles/header.scss
+++ b/styles/header.scss
@@ -5,10 +5,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);;
     &_logo {
         width: 300;
         img {
             width: 100%;
+            cursor: pointer;
         }
     }
 
