--- a/styles/addpost.module.scss
+++ b/styles/addpost.module.scss
@@ -1,5 +1,5 @@
 .addPost {
-    background-color: rgb(206, 206, 206);
+    // background-color: rgb(206, 206, 206);
     height: 100vh;
     padding-top: 50px;
     &_content {
