--- a/styles/artefacts.scss
+++ b/styles/artefacts.scss
@@ -22,12 +22,13 @@
     }
     &_artefactsCard {
         width: 360px;
-        margin-left: 25px;
+        margin-left: 0px;
         text-align: center;
         img {
             width: 314px;
             height: 314px;
             text-align: center;
+            border-radius: 170px;
         }
         h3 {
             margin-top: 25px;
